# homesec

./: .gitignore  Cargo.toml  Makefile  README.md  install-opencv.sh
src/: main.rs
src/notify/: mod.rs
