[package]
name = "homesec"
version = "0.1.0"
authors = ["Seth Moeckel <seth.moeckel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opencv = "0.46.3"
# image = "0.23.13"
# serde = "1.0"
# serde_derive = "1.0"
# # serde_yaml = "0.8.16"
# toml = "0.5.8"
# dlib-face-recognition = "0.1.7"

# tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
tokio = { version = "0.2", features = ["full"] }
# futures = "0.3.14"
twilio = "1.0.0"
chrono = "0.4.0"
joinery = "2.0.0"