[package]
name = "homesec"
version = "0.1.0"
authors = ["Seth Moeckel <seth.moeckel@gmail.com>"]
edition = "2018"

[dependencies]
opencv = "0.53.0"
image = "0.23.13"
# dlib-face-recognition = "0.1.7"

# deps used outside of video pipeline
tokio = { version = "0.2", features = ["full"] }
twilio = "1.0.0"
chrono = "0.4.0"
joinery = "2.0.0"

# serde = "1.0"
# serde_derive = "1.0"
# serde_yaml = "0.8.16"
# toml = "0.5.8"